# rust-fabrust-front-end

./: Cargo.toml  Dockerfile  index.html  index.scss
src/: main.rs  main_page.rs  menu.rs  string_manipulation.rs  string_manipulator.rs  wsl2_tutorial.rs
