[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.21", features=["csr"] }
serde_json = "1.0.97"
gloo-net = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
sha2 = "0.10.8"
flate2 = "1.0.30"
rsa = "0.9.6"
hmac = "0.12.1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
bincode = "1.3.3"
roxmltree = "0.20.0"
rand = "0.8.5"
base64 = "0.22.1"
web-sys = { version =  "0.3.69", features = ["HtmlTextAreaElement", "HtmlElement"] }
yew-router = "0.18.0"
gloo-console = "0.3.0"
sqlformat = "0.2.3"
lazy-regex = "3.2.0"